kubernetes/workloads/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.19.6
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: '300Mi'
              cpu: '500m'
            requests:
              memory: 100Mi
              cpu: 70m
